# Powerpoint-Translate

./: .gitignore  README.md  SPEC.md  pyproject.toml
src/pptx_translate/: __init__.py  cli.py  models.py  translator.py
src/pptx_translate/backends/: __init__.py  base.py  dummy.py  openai_backend.py
src/pptx_translate/ocr/: __init__.py  base.py  pytesseract_backend.py
tests/: test_roundtrip.py
